--- a/demoRegression-master/simpleLM.rmd
+++ b/demoRegression-master/simpleLM.rmd
@@ -9,7 +9,7 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## make a simple regression model
+## Make a simple regression model
 
 ```{r}
 bears <- read.csv(file="BEARS.csv",header = TRUE)
@@ -24,7 +24,7 @@ abline(simp)
 summary.lm(simp)
 ```
 
-## now predict the length of a bear who has a neck of 17, 22 and 26
+## Now predict the length of a bear who has a neck of 17, 22 and 26
 
 
 ```{r}
@@ -34,5 +34,25 @@ predict(simp,new,se.fit=TRUE,interval = "prediction")
 ```
 
 
+## Numerical Summary
+
+```{r}
+cor(bears$LENGTH,bears$NECK)
+```
+
+
+
 ## Surely there is another variable that can better predict LENGTH than NECK. Find one and compare its performance to that of neck by it value of Adjusted-Rsquared (bigger is better).
 
+```{r}
+simp <- lm(LENGTH~CHEST,data=bears)
+plot(LENGTH~CHEST,data=bears)
+abline(simp)
+summary.lm(simp)
+```
+
+# Numerical Summary
+
+```{r}
+cor(bears$LENGTH,bears$CHEST)
+```
