--- a/demoRegression-master/simpleLM.rmd
+++ b/demoRegression-master/simpleLM.rmd
@@ -9,13 +9,20 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+
+## Introduction
+
+We are attempting to find a variable that is a better predictor of the length of the bear than its neck size.
+
+
 ## Make a simple regression model
 
 ```{r}
 bears <- read.csv(file="BEARS.csv",header = TRUE)
 ```
 
-## Model LENGTH ~ NECK  this is an example  
+
+## Model LENGTH ~ NECK    
 
 ```{r}
 simp <- lm(LENGTH~NECK,data=bears)
@@ -23,6 +30,9 @@ plot(LENGTH~NECK,data=bears)
 abline(simp)
 summary.lm(simp)
 ```
+
+Neck as a variable determining a bears length had an adjusted R-squared score of 0.7476.  The scatter plot shows that as the neck size goes up, length does as well, this neck size is a good predictor to determine length. 
+
 
 ## Now predict the length of a bear who has a neck of 17, 22 and 26
 
@@ -51,8 +61,20 @@ abline(simp)
 summary.lm(simp)
 ```
 
-# Numerical Summary
+Chest as the variable for determining a bear's length had an adjusted R-squared score of 0.7869.
+
+The scatter plot shows that as the neck size goes up, length does as well and the neck size is a good predictor in terms of determining the length of a bear.
+
+## Numerical Summary
 
 ```{r}
 cor(bears$LENGTH,bears$CHEST)
 ```
+
+The correlation is a measure of the linear relationship between the two variables
+
+## Conclusion
+
+Chest had an adjusted R-squared value of 0.7869
+Neck had an adjusted R-squared value of 0.7476
+We can conclude that Chest is a better predictor of length than Neck is. We know this because the adjusted R-squared test of the fit for CHEST was larger than the adjusted R-squared of the fit for NECK. The adjusted R-squared 
