--- a/demoRegression-master/simpleLM.rmd
+++ b/demoRegression-master/simpleLM.rmd
@@ -15,7 +15,7 @@ knitr::opts_chunk$set(echo = TRUE)
 We are attempting to find a variable that is a better predictor of the length of the bear than its neck size.
 
 
-## Make a simple regression model
+## Simple regression model
 
 ```{r}
 bears <- read.csv(file="BEARS.csv",header = TRUE)
@@ -34,7 +34,7 @@ summary.lm(simp)
 Neck as a variable determining a bears length had an adjusted R-squared score of 0.7476.  The scatter plot shows that as the neck size goes up, length does as well, this neck size is a good predictor to determine length. 
 
 
-## Now predict the length of a bear who has a neck of 17, 22 and 26
+## Prediction of the length of a bear who has a neck of 17, 22 and 26
 
 
 ```{r}
@@ -50,9 +50,10 @@ predict(simp,new,se.fit=TRUE,interval = "prediction")
 cor(bears$LENGTH,bears$NECK)
 ```
 
+The correlation coefficient is a measure of the linear relationship between the two variables.
 
 
-## Surely there is another variable that can better predict LENGTH than NECK. Find one and compare its performance to that of neck by it value of Adjusted-Rsquared (bigger is better).
+## Model LENGTH~CHEST
 
 ```{r}
 simp <- lm(LENGTH~CHEST,data=bears)
@@ -71,7 +72,7 @@ The scatter plot shows that as the neck size goes up, length does as well and th
 cor(bears$LENGTH,bears$CHEST)
 ```
 
-The correlation is a measure of the linear relationship between the two variables
+The correlation coefficient is a measure of the linear relationship between the two variables.
 
 ## Conclusion
 
